--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "bit-builder",
-    "test": "set NODE_CONFIG_DIR=build/config && npm run build && mocha tst/test.js"
+    "test": "set NODE_CONFIG_DIR=build/configuration && npm run build && mocha test/unit-test.js"
   },
   "author": "Andy Lim <andytlim@gmail.com>",
   "license": "ISC",
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "bit-config": "github:toka-io/bit-config",
+    "mkdirp": "^0.5.1",
+    "path": "^0.12.7",
     "winston": "^2.4.0"
   }
 }
