--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bit-config": "github:toka-io/bit-config",
     "mkdirp": "^0.5.1",
+    "moment": "^2.21.0",
     "winston": "^2.4.0"
   }
 }
