--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "bit-builder": "github:toka-io/bit-builder",
-    "chai": "^4.0.2",
-    "mocha": "^3.4.2",
+    "chai": "^4.1.2",
+    "mocha": "^3.5.3",
     "sinon": "^4.0.1"
   },
   "dependencies": {
     "bit-config": "github:toka-io/bit-config",
     "mkdirp": "^0.5.1",
     "moment": "^2.21.0",
+    "websocket": "^1.0.25",
     "winston": "^2.4.0"
   }
 }
